[tool.poetry]
name = "fpp-sle"
version = "0.2.0"
description = "Implements FPP and SLE algorithms"
authors = ["engeir <engeir@pm.me>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "fpp_sle", from = "src"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.20.2"
numba = ">=0.53.1,<0.58.0"
superposed-pulses = "^1.2"
importlib-metadata = ">=5,<7"

[tool.poetry.group.dev.dependencies]
black = ">=22.10,<24.0"
bandit = "1.7.4"
mypy = ">=0.982,<1.4"
flake8 = "^4.0.1"
pre-commit = ">=2.19,<4.0"
pre-commit-hooks = "^4.2.0"
pytest = "^7.1.2"
isort = "^5.10.1"
darglint = "^1.8.1"
pyupgrade = "^3.0.0"
cosmoplots = ">=0.1.6,<0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
